@@ -17,8 +17,6 @@ package org.mybatis.jpetstore.web.controllers;
 
 import jakarta.servlet.http.HttpSession;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.mybatis.jpetstore.domain.Account;
@@ -42,9 +40,8 @@ public class AccountController {
   private static final String NEW_ACCOUNT_VIEW = "account/NewAccountForm";
   private static final String EDIT_ACCOUNT_VIEW = "account/EditAccountForm";
 
-  private static final List<String> LANGUAGE_LIST = Collections.unmodifiableList(Arrays.asList("english", "japanese"));
-  private static final List<String> CATEGORY_LIST = Collections
-      .unmodifiableList(Arrays.asList("FISH", "DOGS", "REPTILES", "CATS", "BIRDS"));
+  private static final List<String> LANGUAGE_LIST = List.of("english", "japanese");
+  private static final List<String> CATEGORY_LIST = List.of("FISH", "DOGS", "REPTILES", "CATS", "BIRDS");
 
   @Autowired
   private AccountService accountService;
